    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]

=== Stdlib updates (outstanding ones only)

* Net::HTTP
  * Add more HTTP status classes

  * Net::HTTP::STATUS_CODES is added as HTTP Status Code Repository [Misc #12935]

  * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
    environment variable if the system's environment variable is multiuser
    safe. [Bug #12921]

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

=== Compatibility issues (excluding feature bug fixes)

* Net::HTTP
  * Net::HTTP#start now pass :ENV to p_addr by default. [Bug #13351]
    To avoid this, pass nil explicitly.

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  [Feature #13362]

=== Stdlib compatibility issues (excluding feature bug fixes)

* mathn.rb
  Removed from stdlib. [Feature #10169]

=== C API updates

=== Supported platform changes

=== Implementation improvements

* (This might not be a "user visible feature change" but) Hash class's
  hash function is now SipHash13. [Feature #13017]

* SecureRandom now prefers OS-provided sources than OpenSSL. [Bug #9569]

=== Miscellaneous changes

* Print backtrace and error message in reverse order if STDERR is unchanged and a tty.
  [Feature #8661] [experimental]

* configure option --with-ext now mandates its arguments.  So for
  instance if you run ./configure --with-ext=openssl,+ then the
  openssl library is guaranteed compiled, otherwise the build fails
  abnormally.

  Note however to always add the ",+" at the end of the argument.
  Otherwise nothing but openssl are built.  [Feature #13302]